# SCA-ChillValve

./: .env.example  .gitignore  README.md  SCA_Piping_ML_Corrected.ipynb  pyproject.toml
backend/: __init__.py  db.py  debate.py  explainer.py  main.py  models.py  orchestrator.py  websocket.py
data/scenarios/: demo_full_debate.json  demo_full_run.json  demo_rules_ml.json  fault_injection.json  steady_state.json
docs/: ChillValve_Implementation_PRD_v1.md  ChillValve_Implementation_PRD_v2.md  algorithm_pseudocode.md  demo_flow.md  qa_defense.md  simulation_results.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/lib/: api.js  (+5 more)
ml/: preprocess.py  train.py  validate.py
scripts/: calibrate_layer2.py  plot_cv_curves.py  validate_backend_e2e.py  validate_baseline_energy.py  validate_chillvalve_vs_belimo.py
sim/: _env.py  broker.py  coil.py  energy_framework.py  engine.py  io.py  pump.py  scenarios.py  system.py  types.py  units.py  valve.py
sim/controllers/: belimo_baseline.py  chillvalve.py
sim/layers/: layer1_rules.py  layer2_ml.py  layer3_agent.py
tests/: conftest.py  test_backend_db.py  test_backend_orchestrator.py  test_backend_orchestrator_explanations.py  test_backend_rest.py  test_backend_websocket.py  test_belimo.py  test_broker.py  test_chillvalve_controller.py  test_coil.py  test_debate.py  test_engine.py  test_explainer.py  test_fault_injection.py  test_layer1_rules.py  test_layer2_ml.py  test_layer3_agent.py  test_pump.py  test_scenarios.py  test_system.py  test_units.py  test_valve.py
(+51 files in other folders)
