[project]
name = "chillvalve"
version = "0.1.0"
description = "Distributed cooperative-control prototype for HVAC valves in tropical data centers"
readme = "README.md"
authors = [
    { name = "jiale", email = "limjiale1211@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# UP rules excluded: PRD §5.4 uses Optional[...]/List[...]; we mirror that style.
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]
